# qt-toybox

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: aarch64.cmake
src/hello_world/: CMakeLists.txt  Main.cc  MyWidget.cc  MyWidget.h
